[package]
name = "storybook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = "0.8.2"
ui-components-sycamore = { path = "../ui-components-sycamore" }
wasm-bindgen = "0.2.87"
web-sys = { verson = "0.3.64", features = [
    "Node"
]}
